--- a/src/components/component.css
+++ b/src/components/component.css
@@ -6,10 +6,11 @@
     top: 36px;
 } 
 .bm-burger-bars {
-  background: #373a47;
+  background: white;
+  height: 2px !important;
 }
 .bm-burger-bars-hover {
-  background: #005b99;
+  background: #white;
 }
 .bm-cross-button {
   height: 24px;
@@ -32,7 +33,7 @@
 }
 .bm-item-list {
   color: #b8b7ad;
-  padding: 0.8em;
+  padding: 0;
 }
 .bm-item {
   display: inline-block;
