--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -20,6 +20,9 @@ body {
   font-feature-settings: "kern", "liga", "clig", "calt";
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+*::before, *::after {
+  content: '';
+}
 article,
 aside,
 details,
