レイアウト調整・ページ追加

--- a/src/css/component.css
+++ b/src/css/component.css
@@ -1258,6 +1258,12 @@ header {
   top: 0;
 }
 /**
+* main
+**/
+main {
+  margin: 30px 0 0;
+}
+/**
 * footer
 **/
 footer {
@@ -1382,6 +1388,9 @@ footer a {
   background-color: white;
   padding: 0 20px;
 }
-
-
-
+/**
+* utility
+**/
+.d-none {
+  display: none !important;
+}
