レイアウト調整

--- a/src/css/component.css
+++ b/src/css/component.css
@@ -504,6 +504,8 @@ header .header-sns ul li picture img{
   background: white;
   padding: 2.5em 1.5em 0;
   font-size: 1.8rem;
+  border-left: 1rem solid #89A6D1;
+  border-top: 1rem solid #89A6D1;
 }
 .bm-morph-shape {
   fill: #373a47;
