--- a/src/css/component.css
+++ b/src/css/component.css
@@ -57,6 +57,9 @@ header .header-sns ul li picture img{
   border-left: 1rem solid #89A6D1;
   border-top: 1rem solid #89A6D1;
 }
+.bm-cross-button {
+  top: 20px !important;
+}
 .bm-morph-shape {
   fill: #373a47;
 }
@@ -77,7 +80,7 @@ header .header-sns ul li picture img{
 @media (max-width: 979px) {
   header .gatsby-image-wrapper [data-main-image],
   header .gatsby-image-wrapper img {
-    height: 21px;
+    height: 16px;
   }
   .bm-burger-button {
     left: 10px;
@@ -162,6 +165,9 @@ footer a {
     width: calc(50% - 10px);
     margin: 0 auto 10px;
   }
+  .card-content .title {
+    font-size: 2.4rem;
+  }
   .card-content .gatsby-image-wrapper,
   .card-content img {
     width: 90%;
@@ -190,7 +196,7 @@ footer a {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  font-size: 2.4rem;
+  font-size: 1.8rem;
 }
 .breadcrumb ul li {
   list-style-type: none;
