--- a/src/css/component.css
+++ b/src/css/component.css
@@ -7,7 +7,7 @@ header {
 header .header-sns {
   position: absolute;
   top: 50%;
-  right: 20px;
+  right: 2rem;
   transform: translateY(-50%);
 }
 header .header-sns ul {
@@ -143,7 +143,7 @@ footer .copyright {
   }
   footer .l-footer_inner a {
     display: block;
-    padding: 1rem 2rem;
+    padding: 2rem;
     text-decoration: none;
     border-bottom: 1px solid white;
   }
@@ -209,8 +209,8 @@ footer .copyright {
 }
 @media (max-width: 979px) {
   .card-content {
-    width: calc(50% - 10px);
-    margin: 0 auto 10px;
+    width: calc(100% - 10px);
+    margin: 0 auto 2rem;
   }
   .card-content .title {
     font-size: 2.4rem;
@@ -236,9 +236,16 @@ footer .copyright {
   flex-wrap: wrap;
   align-items: center;
 }
-.card-content-detail img {
+.card-content-detail figure {
   width: 30%;
   border: 1px solid #bdc3c7;
+  margin: 1rem 1rem 1rem 0;
+  position: relative;
+  aspect-ratio: 1/.62;
+}
+.card-content-detail figure img {
+  margin: 0;
+  position: absolute;
 }
 .card-content-detail .title{
   position: relative;
@@ -282,8 +289,8 @@ footer .copyright {
   border-bottom: 1px solid black;
   position: absolute;
   display: block;
-  width: 10px;
-  height: 10px;
+  width: 1rem;
+  height: 1rem;
   -webkit-transform: rotate(-135deg) translateX(50%);
           transform: rotate(-135deg) translateX(50%);
   right: 1rem;
@@ -322,7 +329,7 @@ footer .copyright {
 }
 .page-title span {
   background-color: white;
-  padding: 0 20px;
+  padding: 0 2rem;
 }
 @media (max-width: 979px) {
   .page-title {
