レイアウト調整

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,7 +1,6 @@
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  font: 112.5%/1.45em georgia, serif, sans-serif;
   box-sizing: border-box;
   overflow-y: scroll;
   font-size: 62.5%;
@@ -10,13 +9,10 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: hsla(0, 0%, 0%, 0.8);
   font-family: georgia, serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
-  -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
-          font-feature-settings: "kern", "liga", "clig", "calt";
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 @media (max-width: 979px) {
@@ -24,15 +20,17 @@ body {
     font-size: 50%;
   }
 }
+* {
+  box-sizing: inherit;
+}
 *::before, *::after {
   content: '';
+  box-sizing: inherit;
 }
-article, aside, details, figcaption, figure, footer,header, main, menu, nav, section, summary {
+figcaption, figure, footer, header, main, menu, nav, section, summary {
   display: block;
 }
-audio, canvas, progress, video {
-  display: inline-block;
-}
+
 audio:not([controls]) {
   display: none;
   height: 0;
@@ -48,7 +46,7 @@ a {
   -webkit-text-decoration-skip: objects;
   color: #333;
 }
-a:active, a:hover {
+a:is(:active, :hover) {
   outline-width: 0;
 }
 abbr[title] {
@@ -60,38 +58,15 @@ b, strong {
   font-weight: inherit;
   font-weight: bolder;
 }
-dfn {
-  font-style: italic;
-}
 h1 {
   margin: 0;
   padding: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
   line-height: 1.1;
-}
-mark {
-  background-color: #ff0;
-  color: #000;
-}
-small {
-  font-size: 80%;
-}
-sub, sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sub {
-  bottom: -0.25em;
-}
-sup {
-  top: -0.5em;
 }
 img {
   margin: 0;
@@ -99,13 +74,6 @@ img {
   border-style: none;
   max-width: 100%;
   margin-bottom: 1.45rem;
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-code, kbd, pre, samp {
-  font-family: monospace;
-  font-size: 1em;
 }
 figure {
   margin: 0;
@@ -122,7 +90,7 @@ hr {
   border: none;
   height: 1px;
 }
-button, input, optgroup, select, textarea {
+button, input, select, textarea {
   font: inherit;
   margin: 0;
 }
@@ -167,15 +135,6 @@ textarea {
   -webkit-appearance: button;
   font: inherit;
 }
-* {
-  box-sizing: inherit;
-}
-*:before {
-  box-sizing: inherit;
-}
-*:after {
-  box-sizing: inherit;
-}
 h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
@@ -214,37 +173,9 @@ ul, ol {
   list-style-position: outside;
   list-style-image: none;
 }
-dl, dd, p {
+p {
   margin:0;
   padding:0;
-  margin-bottom: 1.45rem;
-}
-pre {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 1.45rem;
-  font-size: 0.85rem;
-  line-height: 1.42;
-  background: hsla(0, 0%, 0%, 0.04);
-  border-radius: 3px;
-  overflow: auto;
-  word-wrap: normal;
-  padding: 1.45rem;
-}
-table {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 1.45rem;
-  font-size: 1rem;
-  line-height: 1.45rem;
-  border-collapse: collapse;
-  width: 100%;
-}
-blockquote {
-  margin: 0;
-  padding: 0;
-  margin-left: 1.45rem;
-  margin-right: 1.45rem;
   margin-bottom: 1.45rem;
 }
 form {
@@ -253,11 +184,6 @@ form {
   margin-bottom: 1.45rem;
 }
 iframe {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 1.45rem;
-}
-address {
   margin: 0;
   padding: 0;
   margin-bottom: 1.45rem;
@@ -276,55 +202,9 @@ li > ol, li > ul {
   margin-bottom: calc(1.45rem / 2);
   margin-top: calc(1.45rem / 2);
 }
-blockquote *:last-child {
-  margin-bottom: 0;
-}
 li *:last-child, p *:last-child  {
   margin-bottom: 0;
 }
 li > p {
   margin-bottom: calc(1.45rem / 2);
-}
-code, kbd, samp {
-  font-size: 0.85rem;
-  line-height: 1.45rem;
-}
-thead {
-  text-align: left;
-}
-td, th {
-  text-align: left;
-  border-bottom: 1px solid hsla(0, 0%, 0%, 0.12);
-  -webkit-font-feature-settings: "tnum";
-          font-feature-settings: "tnum";  
-  padding-left: 0.96667rem;
-  padding-right: 0.96667rem;
-  padding-top: 0.725rem;
-  padding-bottom: calc(0.725rem - 1px);
-}
-th:first-child, td:first-child {
-  padding-left: 0;
-}
-th:last-child, td:last-child {
-  padding-right: 0;
-}
-tt, code {
-  background-color: hsla(0, 0%, 0%, 0.04);
-  border-radius: 3px;
-  font-family: "SFMono-Regular", Consolas, "Roboto Mono", "Droid Sans Mono",
-    "Liberation Mono", Menlo, Courier, monospace;
-  padding: 0;
-  padding-top: 0.2em;
-  padding-bottom: 0.2em;
-}
-pre code {
-  background: none;
-  line-height: 1.42;
-}
-code:before, code:after, tt:before, tt:after {
-  letter-spacing: -0.2em;
-  content: " ";
-}
-pre code:before, pre code:after, pre tt:before, pre tt:after {
-  content: "";
 }
