--- a/src/css/component.css
+++ b/src/css/component.css
@@ -1,3 +1,9 @@
+:root {
+  --black: #333;
+  --white: #fff;
+  --blue: #89A6D1;
+  --gray: #bdc3c7;
+}
 /**
 * common
 **/
@@ -17,7 +23,7 @@ input, button {
 header {
   z-index: 1;
   position: relative;
-  background: #89A6D1;
+  background: var(--blue);
   position: sticky;
   top: 0px;
   left: 0px;
@@ -52,9 +58,9 @@ header .header-sns ul li {
 }
 header .header-sns ul li picture img{
   overflow: hidden;
-  border: 1px solid white;
+  border: 1px solid var(--white);
   border-radius: 50%;
-  background-color: white;
+  background-color: var(--white);
   padding: 2.5px;
 }
 header .header-keyword {
@@ -72,23 +78,27 @@ header label[for*='keyword-checkbox'] {
 }
 header .keyword-box {
   position: absolute;
-  top: 0;
-  right: calc(100% + 10px);
+  top: 35px;
+  left: -175px;
   display: none;
 }
 header .keyword-box .head-search-text {
   padding: 5px 10px;
-  border: 2px solid rgb(137, 166, 209);
-  height: 30px;
+  border: 2px solid var(--blue);
+  height: 40px;
+  min-width: 200px;
+}
+header .keyword-box .head-search-text::placeholder {
+  font-size: 12px;
 }
 header .keyword-box .head-search-btn{
   background: none;
   border: none;
   position: absolute;
   top: calc(50% + 2px);
-  right: 5px;
+  right: 10px;
   transform: translateY(-50%);
-  background: white;
+  background: var(--white);
   padding: 0;
 }
 header #keyword-checkbox:checked ~ .keyword-box  {
@@ -102,29 +112,29 @@ header #keyword-checkbox:checked ~ .keyword-box  {
   top: 15px;
 } 
 .bm-burger-bars {
-  background: white;
+  background: var(--white);
   height: 2px !important;
 }
 .bm-burger-bars-hover {
-  background: white;
+  background: var(--white);
 }
 .bm-cross-button {
   height: 24px;
   width: 24px;
 }
 .bm-cross {
-  background: #bdc3c7;
+  background: var(--blue);
 }
 .bm-menu-wrap {
   position: fixed;
   height: 100%;
 }
 .bm-menu {
-  background: white;
+  background: var(--white);
   padding: 2.5em 1.5em 0;
   font-size: 1.8rem;
-  border-left: 1rem solid #89A6D1;
-  border-top: 1rem solid #89A6D1;
+  border-left: 1rem solid var(--blue);
+  border-top: 1rem solid var(--blue);
 }
 .bm-cross-button {
   top: 20px !important;
@@ -139,6 +149,9 @@ header #keyword-checkbox:checked ~ .keyword-box  {
 .bm-item-list ul {
   list-style-type: none;
 }
+.bm-item-list ul li {
+  margin: 0;
+}
 .bm-item-list ul li a {
   text-decoration: none;
   display: block;
@@ -148,22 +161,22 @@ header #keyword-checkbox:checked ~ .keyword-box  {
   text-decoration: none;
   outline: none;
   padding: 1.5rem 0 1rem;
-  color: #89A6D1;
+  color: var(--blue);
   font-weight: bold;
 }
 .bm-overlay {
-  background: rgba(0, 0, 0, 0.3);
+  background: var(--black);
   top: 0;
 }
 
 @media (max-width: 979px) {
   header .gatsby-image-wrapper img {
     height: 16px;
-    width: auto !important;
   }
   header .keyword-box {
     top: 42px;
     right: 1rem;
+    left: auto;
     width: calc(100vw - 2rem);
   }
   header label[for*='keyword-checkbox'] {
@@ -171,7 +184,7 @@ header #keyword-checkbox:checked ~ .keyword-box  {
   }
   header .keyword-box .head-search-text {
     padding: 5px 10px;
-    border: 2px solid rgb(137, 166, 209);
+    border: 2px solid var(--blue);
     width: 100%;
     height: 40px;
   }
@@ -227,13 +240,13 @@ footer {
   font-size: 1.4rem;
 }
 footer a {
-  color: white;
+  color: var(--white);
 }
 footer .l-footer_inner {
   margin: 2rem -1rem 0;
-  background: rgb(137, 166, 209);
+  background: var(--blue);
   padding: 2rem;
-  color: white;
+  color: var(--white);
 }
 footer .l-footer_inner a {
   padding: 0 2rem 0 0;
@@ -254,13 +267,13 @@ footer .copyright {
     padding: 0;
   }
   footer .l-footer_inner a:first-child {
-    border-top: 1px solid white;
+    border-top: 1px solid var(--white);
   }
   footer .l-footer_inner a {
     display: block;
     padding: 2rem;
     text-decoration: none;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid var(--white);
   }
   footer .copyright {
     text-align: center;
@@ -277,7 +290,7 @@ footer .copyright {
   position: relative;
   width: calc(99.9% / 3 - 20px);
   text-align: center;
-  box-shadow: 0 0 2px 2px #89a6d1, 2px 2px 2px 1px #89a6d1;
+  box-shadow: 0 0 2px 2px var(--blue), 2px 2px 2px 1px var(--blue);
   margin: 0 10px 20px;
   transition: 1s ease-in-out opacity;
   cursor: pointer;
@@ -286,12 +299,12 @@ footer .copyright {
   display: block;
 }
 .card-content a:after {
-  background-color : rgb(137, 166, 209);
+  background-color : var(--blue);
   width: 100%;
   height: 100%;
   display: block;
-  top: 0;
   position: absolute;
+  top: 0;
   left: 0;
   opacity: 0;
   transition: .5s ease-in-out opacity;
@@ -314,7 +327,7 @@ footer .copyright {
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   z-index: 100;
-  color: white;
+  color: var(--white);
   opacity: 0;
   transition: .5s ease-in-out opacity;
 }
@@ -354,10 +367,10 @@ footer .copyright {
 }
 .card-content-detail figure {
   width: 30%;
-  border: 1px solid #bdc3c7;
+  border: 1px solid var(--gray);
   margin: 1rem 1rem 1rem 0;
   position: relative;
-  aspect-ratio: 1/.62;
+  aspect-ratio: 1 / .62;
 }
 .card-content-detail figure img {
   margin: 0;
@@ -404,15 +417,17 @@ footer .copyright {
   flex-wrap: wrap;
   margin: 0;
   font-size: 1.8rem;
+  align-items: center;
 }
 .breadcrumb ul li {
   list-style-type: none;
   position: relative;
   padding: 0 3rem 0 0;
+  margin: 0;
 }
 .breadcrumb ul li:after {
-  border-left: 1px solid black;
-  border-bottom: 1px solid black;
+  border-left: 1px solid var(--black);
+  border-bottom: 1px solid var(--black);
   position: absolute;
   display: block;
   width: 1rem;
@@ -437,7 +452,7 @@ footer .copyright {
 * title
 **/
 .page-title {
-  color: #89A6D1;
+  color: var(--blue);
   text-align: center;
   font-size: 3.2rem;
   line-height: 1.6;
@@ -446,7 +461,7 @@ footer .copyright {
 
 }
 .page-title:before {
-  border: 1px solid #89A6D1;
+  border: 1px solid var(--blue);
   position: absolute;
   top: 50%;
   left: 0;
@@ -454,7 +469,7 @@ footer .copyright {
   width: 100%;
 }
 .page-title span {
-  background-color: white;
+  background-color: var(--white);
   padding: 0 2rem;
 }
 @media (max-width: 979px) {
@@ -477,15 +492,15 @@ footer .copyright {
   appearance: none;
   position: relative;
   padding: 5px 10px;
-  border: 2px solid rgb(137, 166, 209);
+  border: 2px solid var(--blue);
   outline: none;
 }
 .c-select-box:after {
   position: absolute;
   border-left: 5px solid transparent;
   border-bottom: 5px solid transparent;
-  border-right: 5px solid rgb(137, 166, 209);
-  border-top: 5px solid rgb(137, 166, 209);
+  border-right: 5px solid var(--blue);
+  border-top: 5px solid var(--blue);
   -webkit-transform: rotate(135deg) translate(-50%, 50%);
   transform: rotate(135deg) translate(-50%, 50%);
   top: 50%;
