--- a/src/css/component.css
+++ b/src/css/component.css
@@ -128,6 +128,7 @@ header #keyword-checkbox:checked ~ .keyword-box  {
 .bm-menu-wrap {
   position: fixed;
   height: 100%;
+  top: 0 !important;
 }
 .bm-menu {
   background: var(--white);
