--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -30,7 +30,6 @@ body {
 figcaption, figure, footer, header, main, menu, nav, section, summary {
   display: block;
 }
-
 audio:not([controls]) {
   display: none;
   height: 0;
@@ -80,19 +79,10 @@ figure {
   padding: 0;
   margin-bottom: 1.45rem;
 }
-hr {
-  box-sizing: content-box;
-  overflow: visible;
-  margin: 0;
-  padding: 0;
-  margin-bottom: calc(1.45rem - 1px);
-  background: hsla(0, 0%, 0%, 0.2);
-  border: none;
-  height: 1px;
-}
-button, input, select, textarea {
+button, input, select {
   font: inherit;
   margin: 0;
+  outline: none;
 }
 button, input {
   overflow: visible;
@@ -117,9 +107,6 @@ textarea {
   box-sizing: border-box;
   padding: 0;
 }
-[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
 [type="search"] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
@@ -135,7 +122,7 @@ textarea {
   -webkit-appearance: button;
   font: inherit;
 }
-h2, h3, h4, h5, h6 {
+h2, h3, h4 {
   margin: 0;
   padding: 0;
   margin-bottom: 1.45rem;
@@ -153,12 +140,6 @@ h3 {
 }
 h4 {
   font-size: 1rem;
-}
-h5 {
-  line-height: 1.1;
-}
-h6 {
-  font-size: 0.78405rem;
 }
 hgroup {
   margin: 0;
